--- a/package.json
+++ b/package.json
@@ -1,4 +1,5 @@
-{ "homepage": "http://aschneiderbuch.github.io/50_Tag_lev2_1_js_reactjs_props_products",
+{
+  "homepage": "http://aschneiderbuch.github.io/50_Tag_lev2_1_js_reactjs_props_products",
   "name": "reactstart",
   "version": "0.1.0",
   "private": true,
@@ -15,8 +16,8 @@
   },
   "scripts": {
     "start": "react-scripts start",
-    "predeploy" : "npm run build",
-		"deploy" : "gh-pages -d build",
+    "predeploy": "npm run build",
+    "deploy": "gh-pages -d build",
     "build": "react-scripts build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
